--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2189,8 +2189,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \file_get:nnN #1#2#3
   {
-    \file_get:nnNTF {#1} {#2} #3
-      { }
+    \file_get:nnNF {#1} {#2} #3
       { \__kernel_file_missing:n {#1} }
   }
 \prg_new_protected_conditional:Npnn \file_get:nnN #1#2#3 { T , F , TF }
