--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1839,9 +1839,9 @@
             \cs_if_exist:NTF ##1
               { ##2 }
               {
-                ##3
                 \__kernel_msg_expandable_error:nnn
-                  { kernel } { non-declared-variable } { ##1 }
+                  { kernel } { variable-not-defined } { ##1 }
+                ##3
               }
           }
         \cs_set:Npn \__kernel_chk_exp_var_exist:NT ##1 ##2
