better tidying up

--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1676,7 +1676,7 @@
     \cs_new:Npn \dim_use:c #1
       {
         \tex_the:D
-        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_dim }
+        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_dim \exp_after:wN \use_none:n }
         \cs:w #1 \cs_end:
       }
   }
@@ -2032,7 +2032,7 @@
     \cs_new:Npn \skip_use:c #1
       {
         \tex_the:D
-        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_skip }
+        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_skip \exp_after:wN \use_none:n }
         \cs:w #1 \cs_end:
       }
   }
@@ -2313,7 +2313,7 @@
     \cs_new:Npn \muskip_use:c #1
       {
         \tex_the:D
-        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_muskip }
+        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_muskip \exp_after:wN \use_none:n }
         \cs:w #1 \cs_end:
       }
   }
