--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1481,7 +1481,7 @@
     \cs_new:Npn \int_use:c #1
       {
         \tex_the:D
-        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_int }
+        \__kernel_chk_exp_var_exist:cF {#1} { \c_zero_int \exp_after:wN \use_none:n }
         \cs:w #1 \cs_end:
       }
   }
