--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -142,42 +142,6 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}{\box_use_drop:N, \box_use_drop:c}
-%   \begin{syntax}
-%     \cs{box_use_drop:N} \meta{box}
-%   \end{syntax}
-%   Inserts the current content of the \meta{box} onto the current
-%   list for typesetting. An error is raised if the variable does
-%   not exist or if it is invalid.
-%
-%   The \meta{box} is then cleared at the group level the
-%   box was set at, \emph{i.e.}~the current content is \enquote{dropped} entirely.
-%   For example, with
-%   \begin{verbatim}
-%     \hbox_set:Nn \l_tmpa_box { A }
-%     \group_begin:
-%       \hbox_set:Nn \l_tmpa_box { B }
-%       \group_begin:
-%         \box_use_drop:N \l_tmpa_box
-%       \group_end:
-%       \box_show:N \l_tmpa_box
-%     \group_end:
-%     \box_show:N \l_tmpa_box
-%   \end{verbatim}
-%   the first use of \cs{box_show:N} will show an entirely cleared (void) box, and the
-%   second will show the letter |A| in the box.
-%
-%   This function is useful as boxes can contain an open-ended amount of material. As
-%   such, they can have a significant memory impact on \TeX{}. At the same time, it is
-%   often the case that once a box has been inserted, it is no longer needed at all.
-%   Using \cs{box_use_drop:N} in these circumstances therefore offers improved memory
-%   use and performance. It should therefore be preferred over \cs{box_use:N} where
-%   it is clear that the content is no longer needed in the variable.
-%   \begin{texnote}
-%     This is the \TeX{} primitive \tn{box}.
-%   \end{texnote}
-% \end{function}
-%
 % \begin{function}{\box_move_right:nn, \box_move_left:nn}
 %   \begin{syntax}
 %     \cs{box_move_right:nn} \Arg{dimexpr} \Arg{box function}
@@ -642,9 +606,8 @@
 % The functions above for using box contents work in exactly the same
 % way as for any other \pkg{expl3} variable. However, for efficiency
 % reasons, it is also useful to have functions which \emph{drop} box
-% contents on use. This consideration \emph{only applies to local boxes}.
-% When such a box is dropped, the box becomes empty at the group level
-% \emph{where the box was originally set} rather than necessarily
+% contents on use. When a box is dropped, the box becomes empty at the group
+% level \emph{where the box was originally set} rather than necessarily
 % \emph{at the current group level}. For example, with
 % \begin{verbatim}
 %   \hbox_set:Nn \l_tmpa_box { A }
@@ -664,6 +627,19 @@
 % longer required after use. Note that due to the unusual scoping behaviour of
 % \texttt{drop} functions they may be applied to both local and global boxes:
 % the latter will naturally be set and thus cleared at a global level.
+%
+% \begin{function}{\box_use_drop:N, \box_use_drop:c}
+%   \begin{syntax}
+%     \cs{box_use_drop:N} \meta{box}
+%   \end{syntax}
+%   Inserts the current content of the \meta{box} onto the current
+%   list for typesetting then drops the box content.  An error is raised if the
+%   variable does not exist or if it is invalid. This function may be applied to
+%   local or global boxes.
+%   \begin{texnote}
+%     This is the \tn{box} primitive.
+%   \end{texnote}
+% \end{function}
 %
 % \section{Affine transformations}
 %
