--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3check.dtx (C) Copyright 2012-2018 The LaTeX3 Project
+%% File l3check.dtx (C) Copyright 2012-2019 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1134,7 +1134,7 @@
 % \cs{int_decr:N}.  Same for \cs{int_gadd:Nn},
 % \cs{int_gsub:Nn}, \cs{int_gset:Nn},
 % |(dim/skip/muskip)_(gzero:N/gset:Nn/gset_eq:NN/gadd:Nn/gsub:Nn)|,
-% \cs{box_gset_eq:NN}, \cs{box_gset_eq_clear:NN},
+% \cs{box_gset_eq:NN}, \cs{box_gset_eq_drop:NN},
 % \cs{box_get_to_last:N}, \cs{hbox_gset:Nn}, \cs{hbox_gset_to_wd:Nnn},
 % \cs{hbox_gset:Nw}, \cs{vbox_gset:Nn}, \cs{vbox_gset_top:Nn},
 % \cs{vbox_gset_to_ht:Nnn}, \cs{vbox_gset:Nw}.
