--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2986,7 +2986,7 @@ and all files in that bundle must be distributed together.
       {
         \llap
           {
-            \hbox_unpack_clear:N \l_@@_macro_index_box
+            \hbox_unpack_drop:N \l_@@_macro_index_box
             \vtop to \baselineskip
               {
                 \vbox_unpack_clear:N \l_@@_macro_box
@@ -3052,7 +3052,7 @@ and all files in that bundle must be distributed together.
         \@@_if_macro_internal:nF {#1}
           { \seq_gput_right:Nn \g_doc_macros_seq {#1} }
         \hbox_set:Nw \l_@@_macro_index_box
-          \hbox_unpack_clear:N \l_@@_macro_index_box
+          \hbox_unpack_drop:N \l_@@_macro_index_box
           \int_gincr:N \c@CodelineNo
           \@@_special_index:nn {#1} { main }
           \int_gdecr:N \c@CodelineNo
