Rename \vbox_unpack_clear:N as _drop

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -2989,7 +2989,7 @@ and all files in that bundle must be distributed together.
             \hbox_unpack_drop:N \l_@@_macro_index_box
             \vtop to \baselineskip
               {
-                \vbox_unpack_clear:N \l_@@_macro_box
+                \vbox_unpack_drop:N \l_@@_macro_box
                 \vss
               }
           }
@@ -3075,7 +3075,7 @@ and all files in that bundle must be distributed together.
   {
     \vbox_set:Nn \l_@@_macro_box
       {
-        \vbox_unpack_clear:N \l_@@_macro_box
+        \vbox_unpack_drop:N \l_@@_macro_box
         \hbox { \llap { \@@_print_macroname:nN {#1} #2 \ } }
       }
     \int_incr:N \l_@@_macro_int
