--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -721,12 +721,17 @@
 %   Special coffins: these cannot be set up earlier as they need
 %   \cs{coffin_new:N}. The empty coffin is set as a box as the full
 %   coffin-setting system needs some material which is not yet available.
-%   The empty coffin is creted entirely by hand: not everything is in place
-%   yet.
+%   The empty coffin is created entirely by hand: not everything is in place
+%   yet. The same is true for internal coffins, which need scope data.
 %    \begin{macrocode}
 \coffin_new:N \c_empty_coffin
 \coffin_new:N \l_@@_aligned_coffin
 \coffin_new:N \l_@@_aligned_internal_coffin
+\tl_gset:cn
+  { g_@@_scope_ \@@_to_value:N \l_@@_aligned_coffin _tl } { l }
+\tl_gset:cn
+  { g_@@_scope_ \@@_to_value:N \l_@@_aligned_internal_coffin _tl }
+  { l }
 %    \end{macrocode}
 % \end{variable}
 % \end{variable}
