Set coffin scope when resetting structures

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -935,6 +935,7 @@
 \cs_new_protected:Npn \@@_reset_structure:NNN #1#2#3
   {
     \debug_suspend:
+    \tl_gset:cn { g_@@_scope_ \@@_to_value:N #1 _tl } {#2}
     \prop_if_exist:cF { #2 _@@_corners_ \@@_to_value:N #1 _prop }
       {
         \prop_new:c { #2 _@@_corners_ \@@_to_value:N #1 _prop }
