--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -901,20 +901,36 @@
 % \subsection{Coffins: handle and pole management}
 %
 % \begin{macro}{\@@_get_pole:NnN}
+% \begin{macro}{\@@_get_pole:NnNN}
 %   A simple wrapper around the recovery of a coffin pole, with some
-%   error checking and recovery built-in.
+%   error checking and recovery built-in. Where a coffin has no scope, it
+%   must be a \enquote{new} one, and thus we use the constant poles.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_get_pole:NnN #1#2#3
   {
-    \prop_get:cnNF
-      { l_@@_poles_ \@@_to_value:N #1 _prop } {#2} #3
+    \tl_if_empty:cTF { g_@@_scope_ \@@_to_value:N #1 _tl }
+      { \@@_get_pole:NNnN \c_@@_poles_prop }
+      {
+        \exp_args:Nc \@@_get_pole:NNnN
+          {
+            \tl_use:c { g_@@_scope_ \@@_to_value:N #1 _tl }
+            _@@_poles_ \@@_to_value:N #1 _prop
+          }
+      }
+        #1 {#2} #3
+  }
+\cs_new_protected:Npn \@@_get_pole:NNnN #1#2#3#4
+  {
+    \prop_get:NnNF #1
+      {#3} #4
       {
         \__kernel_msg_error:nnxx { kernel } { unknown-coffin-pole }
-          { \exp_not:n {#2} } { \token_to_str:N #1 }
-        \tl_set:Nn #3 { { 0pt } { 0pt } { 0pt } { 0pt } }
+          { \exp_not:n {#3} } { \token_to_str:N #2 }
+        \tl_set:Nn #4 { { 0pt } { 0pt } { 0pt } { 0pt } }
       }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}{\@@_reset_structure:N, \@@_greset_structure:N}
