Support for global coffin pole setting

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -156,8 +156,11 @@
 %   environment in a coffin.
 % \end{function}
 %
-% \begin{function}[added = 2012-07-20]
-%   {\coffin_set_horizontal_pole:Nnn, \coffin_set_horizontal_pole:cnn}
+% \begin{function}[added = 2012-07-20, updated = 2019-01-20]
+%   {
+%     \coffin_set_horizontal_pole:Nnn, \coffin_set_horizontal_pole:cnn,
+%     \coffin_gset_horizontal_pole:Nnn, \coffin_gset_horizontal_pole:cnn
+%   }
 %   \begin{syntax}
 %     \cs{coffin_set_horizontal_pole:Nnn} \meta{coffin}
 %     ~~\Arg{pole} \Arg{offset}
@@ -168,8 +171,11 @@
 %   \meta{offset} should be given as a dimension expression.
 % \end{function}
 %
-% \begin{function}[added = 2012-07-20]
-%   {\coffin_set_vertical_pole:Nnn, \coffin_set_vertical_pole:cnn}
+% \begin{function}[added = 2012-07-20, updated = 2019-01-20]
+%   {
+%     \coffin_set_vertical_pole:Nnn, \coffin_set_vertical_pole:cnn,
+%     \coffin_gset_vertical_pole:Nnn, \coffin_gset_vertical_pole:cnn
+%   }
 %   \begin{syntax}
 %     \cs{coffin_set_vertical_pole:Nnn} \meta{coffin} \Arg{pole} \Arg{offset}
 %   \end{syntax}
@@ -972,34 +978,65 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\coffin_set_horizontal_pole:Nnn, \coffin_set_horizontal_pole:cnn}
-% \begin{macro}{\coffin_set_vertical_pole:Nnn, \coffin_set_vertical_pole:cnn}
-% \begin{macro}{\@@_set_pole:Nnn, \@@_set_pole:Nnx}
+%   {
+%     \coffin_set_horizontal_pole:Nnn, \coffin_set_horizontal_pole:cnn,
+%     \coffin_gset_horizontal_pole:Nnn, \coffin_gset_horizontal_pole:cnn,
+%   }
+% \begin{macro}
+%   {
+%     \coffin_set_vertical_pole:Nnn, \coffin_set_vertical_pole:cnn,
+%     \coffin_gset_vertical_pole:Nnn, \coffin_gset_vertical_pole:cnn,
+%   }
+% \begin{macro}{\@@_set_pole:NNNNnn}
+% \begin{macro}
+%   {
+%     \@@_set_pole:Nnn, \@@_set_pole:Nnx,
+%     \@@_gset_pole:Nnn, \@@_gset_pole:Nnx
+%   }
 %   Setting the pole of a coffin at the user/designer level requires a
 %   bit more care. The idea here is to provide a reasonable interface to
 %   the system, then to do the setting with full expansion. The
-%   three-argument version is used internally to do a direct setting.
+%   three-argument versions are used internally to do a direct setting.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_set_horizontal_pole:Nnn #1#2#3
   {
-    \@@_if_exist:NT #1
-      {
-        \@@_set_pole:Nnx #1 {#2}
-          {
-            { 0pt } { \dim_eval:n {#3} }
-            { 1000pt } { 0pt }
-          }
-      }
+    \@@_set_pole:NNNNnn
+      l \prop_put:cnx \@@_reset_structure:N
+      #1 {#2}
+      { { 0pt } { \dim_eval:n {#3} } { 1000pt } { 0pt } }
   }
+\cs_generate_variant:Nn \coffin_set_horizontal_pole:Nnn { c }
+\cs_new_protected:Npn \coffin_gset_horizontal_pole:Nnn #1#2#3
+  {
+    \@@_set_pole:NNNNnn
+      g \prop_gput:cnx \@@_greset_structure:N
+      #1 {#2}
+      { { 0pt } { \dim_eval:n {#3} } { 1000pt } { 0pt } }
+  }
+\cs_generate_variant:Nn \coffin_gset_horizontal_pole:Nnn { c }
 \cs_new_protected:Npn \coffin_set_vertical_pole:Nnn #1#2#3
   {
-    \@@_if_exist:NT #1
+    \@@_set_pole:NNNNnn
+      l \prop_put:cnx \@@_reset_structure:N
+      #1 {#2}
+      { { \dim_eval:n {#3} } { 0pt } { 0pt } { 1000pt } }
+  }
+\cs_generate_variant:Nn \coffin_set_vertical_pole:Nnn { c }
+\cs_new_protected:Npn \coffin_gset_vertical_pole:Nnn #1#2#3
+  {
+    \@@_set_pole:NNNNnn
+      g \prop_gput:cnx \@@_greset_structure:N
+       #1 {#2}
+      { { \dim_eval:n {#3} } { 0pt } { 0pt } { 1000pt } }
+  }
+\cs_generate_variant:Nn \coffin_gset_vertical_pole:Nnn { c }
+\cs_new_protected:Npn \@@_set_pole:NNNNnn #1#2#3#4#5#6
+  {
+    \@@_if_exist:NT #4
       {
-        \@@_set_pole:Nnx #1 {#2}
-          {
-            { \dim_eval:n {#3} } { 0pt }
-            { 0pt } { 1000pt }
-          }
+        \prop_if_exist:cF { #1 _@@_poles_ \@@_to_value:N #4 _prop }
+          { #3 #4 }
+        #2 { #1 _@@_poles_ \@@_to_value:N #4 _prop } {#5} {#6}
       }
   }
 \cs_new_protected:Npn \@@_set_pole:Nnn #1#2#3
@@ -1007,9 +1044,13 @@
     \prop_put:cnn { l_@@_poles_ \@@_to_value:N #1 _prop }
       {#2} {#3}
   }
-\cs_generate_variant:Nn \coffin_set_horizontal_pole:Nnn { c }
-\cs_generate_variant:Nn \coffin_set_vertical_pole:Nnn { c }
 \cs_generate_variant:Nn \@@_set_pole:Nnn { Nnx }
+\cs_new_protected:Npn \@@_gset_pole:Nnn #1#2#3
+  {
+    \prop_put:cnn { g_@@_poles_ \@@_to_value:N #1 _prop }
+      {#2} {#3}
+  }
+\cs_generate_variant:Nn \@@_gset_pole:Nnn { Nnx }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
