Support for global coffin attachment/joining

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -187,10 +187,12 @@
 %
 % \section{Joining and using coffins}
 %
-% \begin{function}
+% \begin{function}[updated = 2019-01-20]
 %   {
 %     \coffin_attach:NnnNnnnn, \coffin_attach:cnnNnnnn,
-%     \coffin_attach:Nnncnnnn, \coffin_attach:cnncnnnn
+%     \coffin_attach:Nnncnnnn, \coffin_attach:cnncnnnn,
+%     \coffin_gattach:NnnNnnnn, \coffin_gattach:cnnNnnnn,
+%     \coffin_gattach:Nnncnnnn, \coffin_gattach:cnncnnnn
 %   }
 %   \begin{syntax}
 %     \cs{coffin_attach:NnnNnnnn}
@@ -211,10 +213,12 @@
 %   expressions.
 % \end{function}
 %
-% \begin{function}
+% \begin{function}[updated = 2019-01-20]
 %   {
 %     \coffin_join:NnnNnnnn, \coffin_join:cnnNnnnn,
-%     \coffin_join:Nnncnnnn, \coffin_join:cnncnnnn
+%     \coffin_join:Nnncnnnn, \coffin_join:cnncnnnn,
+%     \coffin_gjoin:NnnNnnnn, \coffin_gjoin:cnnNnnnn,
+%     \coffin_gjoin:Nnncnnnn, \coffin_gjoin:cnncnnnn
 %   }
 %   \begin{syntax}
 %     \cs{coffin_join:NnnNnnnn}
@@ -1363,8 +1367,11 @@
 % \begin{macro}
 %   {
 %     \coffin_join:NnnNnnnn, \coffin_join:cnnNnnnn,
-%     \coffin_join:Nnncnnnn , \coffin_join:cnncnnnn
+%     \coffin_join:Nnncnnnn , \coffin_join:cnncnnnn,
+%     \coffin_gjoin:NnnNnnnn, \coffin_gjoin:cnnNnnnn,
+%     \coffin_gjoin:Nnncnnnn , \coffin_gjoin:cnncnnnn
 %   }
+%  \begin{macro}{\@@_join:NnnNnnnnN} 
 %   This command joins two coffins, using a horizontal and vertical pole
 %   from each coffin and making an offset between the two. The result
 %   is stored as the as a third coffin, which has all of its handles
@@ -1372,6 +1379,18 @@
 %   used to get things started.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_join:NnnNnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_join:NnnNnnnnN
+      #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \coffin_set_eq:NN 
+  }
+\cs_generate_variant:Nn \coffin_join:NnnNnnnn { c , Nnnc , cnnc }
+\cs_new_protected:Npn \coffin_gjoin:NnnNnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_join:NnnNnnnnN
+      #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \coffin_gset_eq:NN 
+  }
+\cs_generate_variant:Nn \coffin_gjoin:NnnNnnnn { c , Nnnc , cnnc }
+\cs_new_protected:Npn \@@_join:NnnNnnnnN #1#2#3#4#5#6#7#8#9
   {
     \@@_align:NnnNnnnnN
       #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \l_@@_aligned_coffin
@@ -1426,17 +1445,20 @@
           { \l_@@_offset_x_dim } { \l_@@_offset_y_dim }
       }
     \@@_update_vertical_poles:NNN #1 #4 \l_@@_aligned_coffin
-    \coffin_set_eq:NN #1 \l_@@_aligned_coffin
+    #9 #1 \l_@@_aligned_coffin
   }
-\cs_generate_variant:Nn \coffin_join:NnnNnnnn { c , Nnnc , cnnc }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \begin{macro}
 %   {
 %     \coffin_attach:NnnNnnnn, \coffin_attach:cnnNnnnn,
-%     \coffin_attach:Nnncnnnn, \coffin_attach:cnncnnnn
+%     \coffin_attach:Nnncnnnn, \coffin_attach:cnncnnnn,
+%     \coffin_gattach:NnnNnnnn, \coffin_gattach:cnnNnnnn,
+%     \coffin_gattach:Nnncnnnn, \coffin_gattach:cnncnnnn
 %   }
+% \begin{macro}{\@@_attach:NnnNnnnnN}
 % \begin{macro}{\@@_attach_mark:NnnNnnnn}
 %   A more simple version of the above, as it simply uses the size of the
 %   first coffin for the new one. This means that the work here is rather
@@ -1445,6 +1467,18 @@
 %   updates.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_attach:NnnNnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_attach:NnnNnnnnN
+      #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \coffin_set_eq:NN 
+  }
+\cs_generate_variant:Nn \coffin_attach:NnnNnnnn { c , Nnnc , cnnc }
+\cs_new_protected:Npn \coffin_gattach:NnnNnnnn #1#2#3#4#5#6#7#8
+  {
+    \@@_attach:NnnNnnnnN
+      #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \coffin_gset_eq:NN 
+  }
+\cs_generate_variant:Nn \coffin_gattach:NnnNnnnn { c , Nnnc , cnnc }
+\cs_new_protected:Npn \@@_attach:NnnNnnnnN #1#2#3#4#5#6#7#8#9
   {
     \@@_align:NnnNnnnnN
       #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \l_@@_aligned_coffin
@@ -1463,7 +1497,7 @@
     \@@_offset_poles:Nnn #4
       { \l_@@_offset_x_dim } { \l_@@_offset_y_dim }
     \@@_update_vertical_poles:NNN #1 #4 \l_@@_aligned_coffin
-    \coffin_set_eq:NN #1 \l_@@_aligned_coffin
+    #9 #1 \l_@@_aligned_coffin
   }
 \cs_new_protected:Npn \@@_attach_mark:NnnNnnnn #1#2#3#4#5#6#7#8
   {
@@ -1474,8 +1508,8 @@
     \box_set_wd:Nn \l_@@_aligned_coffin { \box_wd:N #1 }
     \box_set_eq:NN #1 \l_@@_aligned_coffin
   }
-\cs_generate_variant:Nn \coffin_attach:NnnNnnnn { c , Nnnc , cnnc }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
