Rename a coffin function
This was never documented, so no deprecation required.

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1182,7 +1182,7 @@
 %     \coffin_attach:NnnNnnnn, \coffin_attach:cnnNnnnn,
 %     \coffin_attach:Nnncnnnn, \coffin_attach:cnncnnnn
 %   }
-% \begin{macro}{\coffin_attach_mark:NnnNnnnn}
+% \begin{macro}{\@@_attach_mark:NnnNnnnn}
 %   A more simple version of the above, as it simply uses the size of the
 %   first coffin for the new one. This means that the work here is rather
 %   simplified compared to the above code. The function used when marking
@@ -1210,7 +1210,7 @@
     \@@_update_vertical_poles:NNN #1 #4 \l_@@_aligned_coffin
     \coffin_set_eq:NN #1 \l_@@_aligned_coffin
   }
-\cs_new_protected:Npn \coffin_attach_mark:NnnNnnnn #1#2#3#4#5#6#7#8
+\cs_new_protected:Npn \@@_attach_mark:NnnNnnnn #1#2#3#4#5#6#7#8
   {
     \@@_align:NnnNnnnnN
       #1 {#2} {#3} #4 {#5} {#6} {#7} {#8} \l_@@_aligned_coffin
@@ -1515,7 +1515,7 @@
         \rule { 1pt } { 1pt }
 %</package>
       }
-    \coffin_attach_mark:NnnNnnnn #1 {#2} {#3}
+    \@@_attach_mark:NnnNnnnn #1 {#2} {#3}
       \l_@@_display_pole_coffin { hc } { vc } { 0pt } { 0pt }
     \hcoffin_set:Nn \l_@@_display_coord_coffin
       {
@@ -1536,7 +1536,7 @@
           { #3 #2 } \l_@@_internal_tl
         \quark_if_no_value:NTF \l_@@_internal_tl
           {
-            \coffin_attach_mark:NnnNnnnn #1 {#2} {#3}
+            \@@_attach_mark:NnnNnnnn #1 {#2} {#3}
               \l_@@_display_coord_coffin { l } { vc }
                 { 1pt } { 0pt }
           }
@@ -1552,7 +1552,7 @@
   }
 \cs_new_protected:Npn \@@_mark_handle_aux:nnnnNnn #1#2#3#4#5#6#7
   {
-    \coffin_attach_mark:NnnNnnnn #5 {#6} {#7}
+    \@@_attach_mark:NnnNnnnn #5 {#6} {#7}
       \l_@@_display_coord_coffin {#1} {#2}
       { #3 \l_@@_display_offset_dim }
       { #4 \l_@@_display_offset_dim }
