Initialise internal coffins with full structures

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -860,25 +860,10 @@
 % \end{macro}
 %
 % \begin{variable}{\c_empty_coffin}
-% \begin{variable}{\l_@@_aligned_coffin}
-% \begin{variable}{\l_@@_aligned_internal_coffin}
-%   Special coffins: these cannot be set up earlier as they need
-%   \cs{coffin_new:N}. The empty coffin is set as a box as the full
-%   coffin-setting system needs some material which is not yet available.
-%   The empty coffin is created entirely by hand: not everything is in place
-%   yet. The same is true for internal coffins, which need scope data.
+%   A permanently empty coffin.
 %    \begin{macrocode}
 \coffin_new:N \c_empty_coffin
-\coffin_new:N \l_@@_aligned_coffin
-\coffin_new:N \l_@@_aligned_internal_coffin
-\tl_gset:cn
-  { g_@@_scope_ \@@_to_value:N \l_@@_aligned_coffin _tl } { l }
-\tl_gset:cn
-  { g_@@_scope_ \@@_to_value:N \l_@@_aligned_internal_coffin _tl }
-  { l }
 %    \end{macrocode}
-% \end{variable}
-% \end{variable}
 % \end{variable}
 %
 % \begin{variable}{\l_tmpa_coffin, \l_tmpb_coffin}
@@ -1512,6 +1497,17 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
+%
+% \begin{variable}{\l_@@_aligned_coffin, \l_@@_aligned_internal_coffin}
+%   Special coffins: these cannot be set up earlier as they need
+%   \cs{coffin_new:N}. These need to have structures set up from the get-go.
+%    \begin{macrocode}
+\coffin_new:N \l_@@_aligned_coffin
+\coffin_new:N \l_@@_aligned_internal_coffin
+\@@_reset_structure:N \l_@@_aligned_coffin
+\@@_reset_structure:N \l_@@_aligned_internal_coffin
+%    \end{macrocode}
+% \end{variable}
 %
 % \begin{macro}{\@@_align:NnnNnnnnN}
 %   The internal function aligns the two coffins into a third one, but
