--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -580,25 +580,14 @@
 %
 % \begin{macro}{\coffin_new:N, \coffin_new:c}
 %   Creating a new coffin means making the underlying box and adding the
-%   data structures. These are created globally, as there is a need to
-%   avoid any strange effects if the coffin is created inside a group.
-%   This means that the usual rule about \cs[no-index]{l_\ldots}
-%   variables has to be broken.  The \cs{debug_suspend:} and
-%   \cs{debug_resume:} functions prevent these checks.  They also
-%   prevent \cs{prop_clear_new:c} from writing useless information to
-%   the log file.
+%   data structures. As the scope here is linked to the box, we suspend
+%   logging.
 %    \begin{macrocode}
 \cs_new_protected:Npn \coffin_new:N #1
   {
     \box_new:N #1
     \debug_suspend:
     \tl_new:c { g_@@_scope_ \@@_to_value:N #1 _tl }
-    \prop_clear_new:c { l_@@_corners_ \@@_to_value:N #1 _prop }
-    \prop_clear_new:c { l_@@_poles_   \@@_to_value:N #1 _prop }
-    \prop_gset_eq:cN { l_@@_corners_ \@@_to_value:N #1 _prop }
-      \c_@@_corners_prop
-    \prop_gset_eq:cN { l_@@_poles_ \@@_to_value:N #1 _prop }
-      \c_@@_poles_prop
     \debug_resume:
   }
 \cs_generate_variant:Nn \coffin_new:N { c }
@@ -1349,6 +1338,17 @@
 %
 % \subsection{Aligning and typesetting of coffins}
 %
+% \begin{variable}{\l_@@_aligned_coffin, \l_@@_aligned_internal_coffin}
+%   Special coffins: these cannot be set up earlier as they need
+%   \cs{coffin_new:N}. These need to have structures set up from the get-go.
+%    \begin{macrocode}
+\coffin_new:N \l_@@_aligned_coffin
+\coffin_new:N \l_@@_aligned_internal_coffin
+\@@_reset_structure:N \l_@@_aligned_coffin
+\@@_reset_structure:N \l_@@_aligned_internal_coffin
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}
 %   {
 %     \coffin_join:NnnNnnnn, \coffin_join:cnnNnnnn,
@@ -1497,17 +1497,6 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
-%
-% \begin{variable}{\l_@@_aligned_coffin, \l_@@_aligned_internal_coffin}
-%   Special coffins: these cannot be set up earlier as they need
-%   \cs{coffin_new:N}. These need to have structures set up from the get-go.
-%    \begin{macrocode}
-\coffin_new:N \l_@@_aligned_coffin
-\coffin_new:N \l_@@_aligned_internal_coffin
-\@@_reset_structure:N \l_@@_aligned_coffin
-\@@_reset_structure:N \l_@@_aligned_internal_coffin
-%    \end{macrocode}
-% \end{variable}
 %
 % \begin{macro}{\@@_align:NnnNnnnnN}
 %   The internal function aligns the two coffins into a third one, but
