Rename \box_..._clear:N to \box_..._drop:N (fixes #518)
Tidy up the test files and documentation and make sure that behaviour and docs match.

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -94,30 +94,6 @@
 %   Sets the content of \meta{box_1} equal to that of \meta{box_2}.
 % \end{function}
 %
-% \begin{function}
-%   {
-%     \box_set_eq_clear:NN, \box_set_eq_clear:cN,
-%     \box_set_eq_clear:Nc, \box_set_eq_clear:cc
-%   }
-%   \begin{syntax}
-%     \cs{box_set_eq_clear:NN} \meta{box_1} \meta{box_2}
-%   \end{syntax}
-%   Sets the content of \meta{box_1} within the current \TeX{} group
-%   equal to that of \meta{box_2}, then clears \meta{box_2} globally.
-% \end{function}
-%
-% \begin{function}
-%   {
-%     \box_gset_eq_clear:NN, \box_gset_eq_clear:cN,
-%     \box_gset_eq_clear:Nc, \box_gset_eq_clear:cc
-%   }
-%   \begin{syntax}
-%     \cs{box_gset_eq_clear:NN} \meta{box_1} \meta{box_2}
-%   \end{syntax}
-%   Sets the content of \meta{box_1} equal to that of \meta{box_2}, then
-%   clears \meta{box_2}. These assignments are global.
-% \end{function}
-%
 % \begin{function}[EXP, pTF, added=2012-03-03]
 %   {\box_if_exist:N, \box_if_exist:c}
 %   \begin{syntax}
@@ -139,42 +115,6 @@
 %   not exist or if it is invalid.
 %   \begin{texnote}
 %     This is the \TeX{} primitive \tn{copy}.
-%   \end{texnote}
-% \end{function}
-%
-% \begin{function}{\box_use_drop:N, \box_use_drop:c}
-%   \begin{syntax}
-%     \cs{box_use_drop:N} \meta{box}
-%   \end{syntax}
-%   Inserts the current content of the \meta{box} onto the current
-%   list for typesetting. An error is raised if the variable does
-%   not exist or if it is invalid.
-%
-%   The \meta{box} is then cleared at the group level the
-%   box was set at, \emph{i.e.}~the current content is \enquote{dropped} entirely.
-%   For example, with
-%   \begin{verbatim}
-%     \hbox_set:Nn \l_tmpa_box { A }
-%     \group_begin:
-%       \hbox_set:Nn \l_tmpa_box { B }
-%       \group_begin:
-%         \box_use_drop:N \l_tmpa_box
-%       \group_end:
-%       \box_show:N \l_tmpa_box
-%     \group_end:
-%     \box_show:N \l_tmpa_box
-%   \end{verbatim}
-%   the first use of \cs{box_show:N} will show an entirely cleared (void) box, and the
-%   second will show the letter |A| in the box.
-%
-%   This function is useful as boxes can contain an open-ended amount of material. As
-%   such, they can have a significant memory impact on \TeX{}. At the same time, it is
-%   often the case that once a box has been inserted, it is no longer needed at all.
-%   Using \cs{box_use_drop:N} in these circumstances therefore offers improved memory
-%   use and performance. It should therefore be preferred over \cs{box_use:N} where
-%   it is clear that the content is no longer needed in the variable.
-%   \begin{texnote}
-%     This is the \TeX{} primitive \tn{box}.
 %   \end{texnote}
 % \end{function}
 %
@@ -477,18 +417,6 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}{\hbox_unpack_clear:N, \hbox_unpack_clear:c}
-%   \begin{syntax}
-%     \cs{hbox_unpack_clear:N} \meta{box}
-%   \end{syntax}
-%   Unpacks the content of the horizontal \meta{box}, retaining any stretching
-%   or shrinking applied when the \meta{box} was set. The \meta{box} is
-%   then cleared globally.
-%   \begin{texnote}
-%     This is the \TeX{} primitive \tn{unhbox}.
-%   \end{texnote}
-% \end{function}
-%
 % \section{Vertical mode boxes}
 %
 % Vertical boxes inherit their baseline from their contents. The
@@ -625,13 +553,91 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}{\vbox_unpack_clear:N, \vbox_unpack_clear:c}
+% \section{Using boxes efficiently}
+%
+% The functions above for using box contents work in exactly the same
+% way as for any other \pkg{expl3} variable. However, for efficiency
+% reasons, it is also useful to have functions which \emph{drop} box
+% contents on use. When a box is dropped, the box becomes empty at the group
+% level \emph{where the box was originally set} rather than necessarily
+% \emph{at the current group level}. For example, with
+% \begin{verbatim}
+%   \hbox_set:Nn \l_tmpa_box { A }
+%   \group_begin:
+%     \hbox_set:Nn \l_tmpa_box { B }
+%      \group_begin:
+%      \box_use_drop:N \l_tmpa_box
+%     \group_end:
+%     \box_show:N \l_tmpa_box
+%   \group_end:
+%   \box_show:N \l_tmpa_box
+%   \end{verbatim}
+% the first use of \cs{box_show:N} will show an entirely cleared (void) box, and the
+% second will show the letter |A| in the box.
+%
+% These functions should be preferred when the content of the box is no
+% longer required after use. Note that due to the unusual scoping behaviour of
+% \texttt{drop} functions they may be applied to both local and global boxes:
+% the latter will naturally be set and thus cleared at a global level.
+%
+% \begin{function}{\box_use_drop:N, \box_use_drop:c}
 %   \begin{syntax}
-%     \cs{vbox_unpack:N} \meta{box}
+%     \cs{box_use_drop:N} \meta{box}
+%   \end{syntax}
+%   Inserts the current content of the \meta{box} onto the current
+%   list for typesetting then drops the box content.  An error is raised if the
+%   variable does not exist or if it is invalid. This function may be applied to
+%   local or global boxes.
+%   \begin{texnote}
+%     This is the \tn{box} primitive.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2019-01-17]
+%   {
+%     \box_set_eq_drop:NN, \box_set_eq_drop:cN,
+%     \box_set_eq_drop:Nc, \box_set_eq_drop:cc
+%   }
+%   \begin{syntax}
+%     \cs{box_set_eq_drop:NN} \meta{box_1} \meta{box_2}
+%   \end{syntax}
+%   Sets the content of \meta{box_1} equal to that of \meta{box_2}, then
+%   drops \meta{box_2}.
+% \end{function}
+%
+% \begin{function}[added = 2019-01-17]
+%   {
+%     \box_gset_eq_drop:NN, \box_gset_eq_drop:cN,
+%     \box_gset_eq_drop:Nc, \box_gset_eq_drop:cc
+%   }
+%   \begin{syntax}
+%     \cs{box_gset_eq_drop:NN} \meta{box_1} \meta{box_2}
+%   \end{syntax}
+%   Sets the content of \meta{box_1} globally equal to that of \meta{box_2},
+%   then drops \meta{box_2}.
+% \end{function}
+%
+% \begin{function}[added = 2019-01-17]
+%   {\hbox_unpack_drop:N, \hbox_unpack_drop:c}
+%   \begin{syntax}
+%     \cs{hbox_unpack_drop:N} \meta{box}
+%   \end{syntax}
+%   Unpacks the content of the horizontal \meta{box}, retaining any stretching
+%   or shrinking applied when the \meta{box} was set. The original \meta{box}
+%   is then dropped.
+%   \begin{texnote}
+%     This is the \TeX{} primitive \tn{unhbox}.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2019-01-17]
+%   {\vbox_unpack_drop:N, \vbox_unpack_drop:c}
+%   \begin{syntax}
+%     \cs{vbox_unpack_drop:N} \meta{box}
 %   \end{syntax}
 %   Unpacks the content of the vertical \meta{box}, retaining any stretching
-%   or shrinking applied when the \meta{box} was set. The \meta{box}
-%   is then cleared globally.
+%   or shrinking applied when the \meta{box} was set. The original \meta{box}
+%   is then dropped.
 %   \begin{texnote}
 %     This is the \TeX{} primitive \tn{unvbox}.
 %   \end{texnote}
@@ -943,27 +949,25 @@
 %
 % \begin{macro}
 %   {
-%     \box_set_eq_clear:NN, \box_set_eq_clear:cN,
-%     \box_set_eq_clear:Nc, \box_set_eq_clear:cc
+%     \box_set_eq_drop:NN, \box_set_eq_drop:cN,
+%     \box_set_eq_drop:Nc, \box_set_eq_drop:cc
 %   }
-% \testfile*
 % \begin{macro}
 %   {
-%     \box_gset_eq_clear:NN, \box_gset_eq_clear:cN,
-%     \box_gset_eq_clear:Nc, \box_gset_eq_clear:cc
+%     \box_gset_eq_drop:NN, \box_gset_eq_drop:cN,
+%     \box_gset_eq_drop:Nc, \box_gset_eq_drop:cc
 %   }
-% \testfile*
-%    Assigning the contents of a box to be another box.
-%    This clears the second box globally (that's how \TeX{} does it).
+%    Assigning the contents of a box to be another box, then drops the
+%    original box.
 %    \begin{macrocode}
 \__kernel_patch:nnNNpn { \__kernel_chk_var_local:N #1 } { }
-\cs_new_protected:Npn \box_set_eq_clear:NN #1#2
+\cs_new_protected:Npn \box_set_eq_drop:NN #1#2
   { \tex_setbox:D #1 \tex_box:D #2 }
 \__kernel_patch:nnNNpn { \__kernel_chk_var_global:N #1 } { }
-\cs_new_protected:Npn \box_gset_eq_clear:NN #1#2
+\cs_new_protected:Npn \box_gset_eq_drop:NN #1#2
   { \tex_global:D \tex_setbox:D #1 \tex_box:D #2 }
-\cs_generate_variant:Nn \box_set_eq_clear:NN  { c , Nc , cc }
-\cs_generate_variant:Nn \box_gset_eq_clear:NN { c , Nc , cc }
+\cs_generate_variant:Nn \box_set_eq_drop:NN  { c , Nc , cc }
+\cs_generate_variant:Nn \box_gset_eq_drop:NN { c , Nc , cc }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1357,14 +1361,14 @@
 % \end{macro}
 %
 % \begin{macro}{\hbox_unpack:N, \hbox_unpack:c}
-% \begin{macro}{\hbox_unpack_clear:N, \hbox_unpack_clear:c}
+% \begin{macro}{\hbox_unpack_drop:N, \hbox_unpack_drop:c}
 % \testfile*
 %   Unpacking a box and if requested also clear it.
 %    \begin{macrocode}
 \cs_new_eq:NN \hbox_unpack:N \tex_unhcopy:D
-\cs_new_eq:NN \hbox_unpack_clear:N \tex_unhbox:D
+\cs_new_eq:NN \hbox_unpack_drop:N \tex_unhbox:D
 \cs_generate_variant:Nn \hbox_unpack:N { c }
-\cs_generate_variant:Nn \hbox_unpack_clear:N { c }
+\cs_generate_variant:Nn \hbox_unpack_drop:N { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1539,14 +1543,14 @@
 % \end{macro}
 %
 % \begin{macro}{\vbox_unpack:N, \vbox_unpack:c}
-% \begin{macro}{\vbox_unpack_clear:N, \vbox_unpack_clear:c}
+% \begin{macro}{\vbox_unpack_drop:N, \vbox_unpack_drop:c}
 % \testfile*
 %   Unpacking a box and if requested also clear it.
 %    \begin{macrocode}
 \cs_new_eq:NN \vbox_unpack:N \tex_unvcopy:D
-\cs_new_eq:NN \vbox_unpack_clear:N \tex_unvbox:D
+\cs_new_eq:NN \vbox_unpack_drop:N \tex_unvbox:D
 \cs_generate_variant:Nn \vbox_unpack:N { c }
-\cs_generate_variant:Nn \vbox_unpack_clear:N { c }
+\cs_generate_variant:Nn \vbox_unpack_drop:N { c }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -2107,6 +2111,49 @@
           }
       }
   }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Deprecated functions}
+%
+% \begin{macro}
+%   {
+%     \box_set_eq_clear:NN, \box_set_eq_clear:cN,
+%     \box_set_eq_clear:Nc, \box_set_eq_clear:cc
+%   }
+% \begin{macro}
+%   {
+%     \box_gset_eq_clear:NN, \box_gset_eq_clear:cN,
+%     \box_gset_eq_clear:Nc, \box_gset_eq_clear:cc
+%   }
+%    \begin{macrocode}
+\__kernel_patch_deprecation:nnNNpn { 2020-12-31 } { \box_set_eq_drop:N }
+\cs_new_protected:Npn \box_set_eq_clear:NN #1#2
+  { \tex_setbox:D #1 \tex_box:D #2 }
+\__kernel_patch_deprecation:nnNNpn { 2020-12-31 } { \box_gset_eq_drop:N }
+\cs_new_protected:Npn \box_gset_eq_clear:NN #1#2
+  { \tex_global:D \tex_setbox:D #1 \tex_box:D #2 }
+\cs_generate_variant:Nn \box_set_eq_clear:NN  { c , Nc , cc }
+\cs_generate_variant:Nn \box_gset_eq_clear:NN { c , Nc , cc }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\hbox_unpack_clear:N, \hbox_unpack_clear:c}
+%    \begin{macrocode}
+\__kernel_patch_deprecation:nnNNpn { 2020-12-31 } { \hbox_unpack_drop:N }
+\cs_new_protected:Npn \hbox_unpack_clear:N
+  { \hbox_unpack_drop:N }
+\cs_generate_variant:Nn \hbox_unpack_clear:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\vbox_unpack_clear:N, \vbox_unpack_clear:c}
+%    \begin{macrocode}
+\__kernel_patch_deprecation:nnNNpn { 2020-12-31 } { \vbox_unpack_drop:N }
+\cs_new_protected:Npn \vbox_unpack_clear:N
+  { \vbox_unpack_drop:N }
+\cs_generate_variant:Nn \vbox_unpack_clear:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
