--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2018 The LaTeX3 Project
+%% File xfss.dtx Copyright (C) 2011,2012,2013,2015-2019 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -567,7 +567,7 @@
 %   \LaTeXe's \cs{leavevmode} and \cs{mbox}
 %    \begin{macrocode}
  % \cs_new_protected:Npn \mode_leave_vertical:
- %   { \hbox_unpack_clear:N \c_empty_box }
+ %   { \hbox_unpack_drop:N \c_empty_box }
 \cs_if_free:NT \xfss_text_in_math:n
   {
     \cs_new_protected:Npn \xfss_text_in_math:n
